--- a/css/1.css
+++ b/css/1.css
@@ -1,5 +1,7 @@
 body{
-  text-align:center;
+  background-size:100% 100%;
+  background-repeat: repeat;
+  background-color:black;
 }
 
 h1,h2{
@@ -8,12 +10,16 @@ h1,h2{
   font-weight:800;
   padding:2rem;
   white-space:wrap;
-  margin-left:22rem;
   margin-right:22rem;
-  margin-top:-0.2rem;
-  margin-bottom:-0.2rem;
+  margin-bottom:1rem;
 }
 
 footer{
-	padding:-4rem;
+  padding:-4rem;
 }
+
+.wrap{
+  height: 130px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
