--- a/css/4.css
+++ b/css/4.css
@@ -1,5 +1,9 @@
 body{
   text-align:center;
+  background-size:100% 100%;
+  background-repeat: no-repeat;
+  background-color:black;
+
 }
 
 h1,h2{
