--- a/css/1.css
+++ b/css/1.css
@@ -1,7 +1,8 @@
 body{
   background-size:100% 100%;
-  background-repeat: repeat;
+  background-repeat: no-repeat;
   background-color:black;
+  background-image: url("../img/7.png");
 }
 
 h1,h2{
@@ -14,12 +15,75 @@ h1,h2{
   margin-bottom:1rem;
 }
 
-footer{
-  padding:-4rem;
+/* 主体 */
+#wrapper{
+  /* 宽度 */
+  width: 90%;
+
+  /* 外间距 上下为0 左右自动（居中） */
+  margin: 0 auto;
+
+  /* 最小宽度1600px */
+  min-width: 1600px;
+
+  /* 上间距 */
+  margin-top: 30px;
 }
 
-.wrap{
-  height: 130px;
-  overflow-x: auto;
-  overflow-y: hidden;
-  white-space: nowrap;
+/* 通用内容框架 */
+#wrapper section{
+
+  /* 分为3列 每列33.33% ， 去掉两边外间距2% x 2 = 6% */
+  width: 29.33%;
+
+  /* 左浮动 */
+  float: left;
+
+  /* 外间距 上下0 左右2% */
+  margin: 0，2%;
+
+  /* 最小狂赌450px */
+  min-width: 450px;
+}
+
+#wrapper section iframe{
+  /* 元素将显示为块级元素 */
+  display: block;
+  /* 外间距 上下为0 左右自动（居中） */
+  margin: 0 auto;
+}
+
+#wrapper .spotify{
+  /* 下间距90px */
+  margin-bottom: 90px;
+}
+
+.but{
+  margin: 0;
+  position: absolute;
+  top: 82%;
+  left: 6%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+a{
+  background-color: black; /* Green */
+  border: none;
+  color: grey;
+  padding: 40px 45px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  animation-name:shake;
+  animation-duration:4s;
+}
+
+
+@keyframes shake{
+  0%   {background-color:grey; left:0px; top:0px;}
+  25%  {background-color:black; left:200px; top:0px;}
+  50%  {background-color:grey; left:400px; top:0px;}
+  75%  {background-color:black; left:600px; top:0px;}
+  100% {background-color:grey; left:500px; top:0px;}
+}
