--- a/css/2.css
+++ b/css/2.css
@@ -1,8 +1,8 @@
 body{
-  text-align:center;
   background-size:100% 100%;
   background-repeat: no-repeat;
   background-color:black;
+  background-image: url("../img/8.png");
 }
 
 h1,h2{
@@ -11,15 +11,80 @@ h1,h2{
   font-weight:800;
   padding:2rem;
   white-space:wrap;
-  margin-left:22rem;
   margin-right:22rem;
   margin-bottom:1rem;
 }
 
-footer{
-	padding:-4rem;
+/* 主体 */
+#wrapper{
+  /* 宽度 */
+  width: 90%;
+
+  /* 外间距 上下为0 左右自动（居中） */
+  margin: 0 auto;
+
+  /* 最小宽度1600px */
+  min-width: 1000px;
+
+  /* 上间距 */
+  margin-top: 30px;
 }
 
-iframe{
-	margin-top:2rem;
+/* 通用内容框架 */
+#wrapper section{
+
+  /* 分为3列 每列33.33% ， 去掉两边外间距2% x 2 = 6% */
+  width: 40%;
+
+  /* 左浮动 */
+  float: left;
+
+  /* 外间距 上下0 左右2% */
+  margin: 0，2%;
+
+  /* 最小狂赌450px */
+  min-width: 450px;
+}
+
+#wrapper section iframe{
+  /* 元素将显示为块级元素 */
+  display: block;
+  /* 外间距 上下为0 左右自动（居中） */
+  margin: 0 auto;
+}
+
+#wrapper .youtube{
+  /* 下间距90px */
+  margin-bottom: 60px;
+}
+
+
+.but{
+  margin: 0;
+  position: absolute;
+  top: 70%;
+  left: 40%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+a{
+  background-color: black; /* Green */
+  border: none;
+  color: grey;
+  padding: 40px 45px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  animation-name:shake;
+  animation-duration:4s;
+}
+
+
+@keyframes shake{
+    0%   {background-color:grey; left:0px; top:0px;}
+  25%  {background-color:black; left:200px; top:0px;}
+  50%  {background-color:grey; left:400px; top:0px;}
+  75%  {background-color:black; left:600px; top:0px;}
+  100% {background-color:grey; left:500px; top:0px;}
 }
